# db_reader2

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  setup.py  template.py
src/db_reader/: __init__.py
src/db_reader/config/: config.py
src/db_reader/context/: table_names.txt
src/db_reader/model/: model.py
src/db_reader/nl_to_sql/: nl_to_sql.py
src/db_reader/preprocessing/: preprocess.py
src/db_reader/research/: data_connection.ipynb  delete_it.ipynb  exp.ipynb  llama_index_sql.ipynb  llm.ipynb  rag_1.ipynb
src/db_reader/sql_connection/: connection.py
src/db_reader/table_name_json/: table_names.json
src/db_reader/table_schema/: table_schema.txt
static/: index.js
static/css/: index.js  style.css  try.css
templates/: configuration.html  home_page.html  login.html  try.html
