[project]
name = "db-reader2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ruff>=0.8.0",
    "pandas",
    "fireducks",
    "langchain",
    "langchain-community",
    "langchain-experimental",
    "pymssql",
    "SQLAlchemy",
    "sentence-transformers",
    "flask",
    "python-dotenv",
    "langchain-nvidia-ai-endpoints",
    "ipykernel"
]
