[project]
name = "db-reader2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ruff>=0.8.0",
    "pandas",
    "fireducks",
    "langchain",
    "langchain-community",
    "langchain-experimental",
    "pymssql",
    "SQLAlchemy",
    "sentence-transformers",
    "flask",
    "python-dotenv",
    "langchain-nvidia-ai-endpoints",
    "ipykernel",
    "ensure>=1.0.4",
    "langchain-google-genai>=2.0.7",
    "google-generativeai>=0.8.3",
    "langchain-core>=0.3.21",
    "llama-index-llms-ollama>=0.5.0",
    "llama-index>=0.12.8",
    "llama-index-embeddings-huggingface>=0.4.0",
    "llama-index-llms-gemini>=0.4.2",
]
